clusters/prod/apps/oppam/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oppam-backend
  namespace: web
  labels:
    app: oppam-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oppam-backend
  template:
    metadata:
      labels:
        app: oppam-backend
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: oppam-backend
          image: docker.io/sudhan03/oppam-backend:ts-1772341151 # {"$imagepolicy": "flux-system:oppam-backend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /uploads
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: oppam-uploads-pvc
